--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <body>
     <nav>
         <a href="../index.html">Personal Blogging App</a>
-        <button>Login</button>
+         <button><a href="./pages/login.html">Login</a></button>
     </nav>
     <article class="blog-post">
         <div class="author-info">
