--- a/pages/login.html
+++ b/pages/login.html
@@ -76,7 +76,7 @@
 <body>
     <nav>
         <a href="../index.html">Personal Blogging App</a>
-        <button>Login</button>
+       <button><a href="./login.html">Login</a></button>
     </nav>
     <div class="container-fluid">
         <div class="row">
